# Eval-harness

./: .gitignore  README.md  pyproject.toml
mcp_eval/: __init__.py  cli.py  grader.py  results.py  runner.py  schemas.py  task_loader.py
mcp_eval/adapters/: anthropic_adapter.py  base.py  google_adapter.py  mock.py  openai_adapter.py
mcp_eval/mock_servers/: __init__.py  postgres.py
tasks/core/: t001_recent_inactive_easy.yaml  t002_recent_inactive_medium.yaml  t003_recent_inactive_hard.yaml
tests/: test_runner_mock.py  test_task_loader.py
