[project]
name = "mcp-eval"
version = "0.1.0"
description = "Task-based benchmark harness for MCP tool-calling evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.0",
  "pyyaml>=6.0.1",
  "polars>=1.6.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
providers = [
  "openai>=1.40.0",
  "anthropic>=0.34.0",
  "google-genai>=0.5.0",
]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
]

[project.scripts]
mcp-eval = "mcp_eval.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_eval", "mcp_eval.adapters", "mcp_eval.mock_servers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
